syntax = "proto3";



package pb;
option go_package ="./;pb";

service Zgoframe {
    rpc SayHello (RequestUser) returns (ResponseUser) {}//测试5
    rpc Comm (RequestUser) returns (ResponseUser) {}//测试6
}

message RequestUser{
    uint64      id              = 1;
    string      nickname        = 2;
}

message ResponseUser{
    uint64      id              = 1;
    string      nickname        = 2;
}

message CSHeartbeat {
    uint64  time     = 1;
    uint32  uid      = 2;
}

message SCHeartbeat {
    uint64  time     = 1;
    uint32  uid      = 2;
}
